package ifmo.programming.lab6.json;

public class JSONParseException extends Exception {
    public JSONParseException(String message) {
        super(message);
    }
}