@startuml

title __JSON's Class Diagram__\n

  package ifmo.programming.lab6 {
    package ifmo.programming.lab6.json {
      class JSONArray {
          - items : ArrayList<JSONEntity>
          + JSONArray()
          + JSONArray()
          + size()
          + JSONArray()
          + getItem()
          + getItems()
          + removeItem()
          + addItem()
          + toString()
          + toFormattedString()
      }
    }
  }
  

  package ifmo.programming.lab6 {
    package ifmo.programming.lab6.json {
      class JSONBoolean {
          - value : boolean
          ~ JSONBoolean()
          ~ JSONBoolean()
          + getValue()
          + setValue()
          + toString()
          # toFormattedString()
      }
    }
  }
  

  package ifmo.programming.lab6 {
    package ifmo.programming.lab6.json {
      class JSONEntity {
          + toFormattedString()
          + toFormattedString()
          # toFormattedString()
          # getPaddingString()
          + getType()
          + getTypeName()
          + isObject()
          + isArray()
          + isBoolean()
          + isNumber()
          + isString()
          + toInt()
          + toObject()
          + toObject()
          + toArray()
          + toArray()
          + toBoolean()
          + toBoolean()
          + toNumber()
          + toNumber()
          + toString()
      }
    }
  }
  

  package ifmo.programming.lab6 {
    package ifmo.programming.lab6.json {
      class JSONNumber {
          - value : double
          ~ JSONNumber()
          + getValue()
          + setValue()
          + toString()
          # toFormattedString()
      }
    }
  }
  

  package ifmo.programming.lab6 {
    package ifmo.programming.lab6.json {
      class JSONObject {
          - items : HashMap<String, JSONEntity>
          + JSONObject()
          + JSONObject()
          + JSONObject()
          + getItems()
          + setItems()
          + getItem()
          + putItem()
          + putItem()
          + putItem()
          + putItem()
          + removeItem()
          + toString()
          # toFormattedString()
      }
    }
  }
  

  package ifmo.programming.lab6 {
    package ifmo.programming.lab6.json {
      class JSONParseException {
          + JSONParseException()
      }
    }
  }
  

  package ifmo.programming.lab6 {
    package ifmo.programming.lab6.json {
      class JSONParser {
          {static} + parse()
          {static} - process()
          {static} - makeObjectEntry()
          {static} - getValidCommas()
          {static} - isObject()
          {static} - isArray()
          {static} - isNumber()
          {static} - isString()
          {static} - isBoolean()
          {static} - isNull()
      }
    }
  }
  

  package ifmo.programming.lab6 {
    package ifmo.programming.lab6.json {
      class JSONString {
          - content : String
          + JSONString()
          + JSONString()
          + getContent()
          + setContent()
          + toString()
          # toFormattedString()
      }
    }
  }
  

  package ifmo.programming.lab6 {
    package ifmo.programming.lab6.json {
      enum JSONType {
        OBJECT
        ARRAY
        STRING
        NUMBER
        BOOLEAN
        name
      }
    }
  }
  

  JSONArray -up-|> JSONEntity
  JSONBoolean -up-|> JSONEntity
  JSONEntity o-- JSONType : type
  JSONNumber -up-|> JSONEntity
  JSONObject -up-|> JSONEntity
  JSONString -up-|> JSONEntity


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
